--- a/themes/landscape-njk/layout/_partial/footer.ejs
+++ b/themes/landscape-njk/layout/_partial/footer.ejs
@@ -9,7 +9,7 @@
           <td style="text-align:left">
             Copyright &copy; 2014-<%= date(new Date(), 'YYYY') %> <%= config.author || config.title %> &nbsp; &nbsp;
             Powered by <a href="http://hexo.io/" target="_blank">Hexo</a><br>
-	        Theme <a href="https://github.com/njk/landscape-njk" target="_blank">爱折腾</a> by 游骑爬 &nbsp; &nbsp;
+	        Theme <a href="https://github.com/njkfei/landscape-njk" target="_blank">爱折腾</a> by 游骑爬 &nbsp; &nbsp;
 	        Hosted on <a href="https://github.com/" target="_blank">GitHub</a>
 		  </td>
 		  <td style="text-align:right">
